# Snake-Game-AI

./: README.md  app.py  index.html  requirements.txt
rust/: Cargo.toml  pyproject.toml
rust/src/: lib.rs
snake/: demo_0.0.py  demo_1.2.py  requirements.txt  snake_v6_long_train.py
static/: demo_script.js  demo_style.css
